--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Header from '../components/header.astro';
-import Layout from '../layouts/Layout.astro';
-import Booksvg from '../assets/books.svg';
-import Messagesvg from '../assets/message-circle.svg';
-import Moviesvg from '../assets/movie.svg';
-import Pencilsvg from '../assets/pencil.svg';
-import Footer from '../components/footer.astro';
-import BgImage from '../assets/woman_studying.jpg';
+import Header from '@/components/header.astro';
+import Layout from '@/layouts/Layout.astro';
+import Booksvg from '@/assets/books.svg';
+import Messagesvg from '@/assets/message-circle.svg';
+import Moviesvg from '@/assets/movie.svg';
+import Pencilsvg from '@/assets/pencil.svg';
+import Footer from '@/components/footer.astro';
+import BgImage from '@/assets/woman_studying.jpg';
 ---
 
 <Layout>
