--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/header.astro';
-import Footer from '../components/footer.astro';
+import Layout from '@/layouts/Layout.astro';
+import Header from '@/components/header.astro';
+import Footer from '@/components/footer.astro';
 
 
 export const prerender = false;
