--- a/src/pages/index_alt.astro
+++ b/src/pages/index_alt.astro
@@ -1,13 +1,13 @@
 ---
-import Header from '../components/header.astro';
-import Layout from '../layouts/Layout.astro';
-import Booksvg from '../assets/books.svg';
-import Messagesvg from '../assets/message-circle.svg';
-import Moviesvg from '../assets/movie.svg';
-import Pencilsvg from '../assets/pencil.svg';
-import Userchecksvg from '../assets/user-check.svg';
-import Footer from '../components/footer.astro';
-import BgImage from '../assets/woman_studying.jpg';
+import Header from '@/components/header.astro';
+import Layout from '@/layouts/Layout.astro';
+import Booksvg from '@/assets/books.svg';
+import Messagesvg from '@/assets/message-circle.svg';
+import Moviesvg from '@/assets/movie.svg';
+import Pencilsvg from '@/assets/pencil.svg';
+import Userchecksvg from '@/assets/user-check.svg';
+import Footer from '@/components/footer.astro';
+import BgImage from '@/assets/woman_studying.jpg';
 ---
 
 <Layout>
