--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,9 +3,6 @@ import Layout from '@/layouts/Layout.astro';
 import Header from '@/components/header.astro';
 import Footer from '@/components/footer.astro';
 
-
-export const prerender = false;
-
         let Message=" ";
 
         const sent = Astro.url.searchParams.get('sent');
@@ -82,8 +79,8 @@ export const prerender = false;
                     
                     
 
-                    <div class="flex flex-col md:flex-row justify-between items-center pt-4 md:pt-10">
-                          {sent=='success' && <p class="text-green-800 mb-6 md:m-0">{Message}</p>}
+                    <div class="flex flex-col md:flex-row justify-end items-center pt-4 md:pt-10">
+                          {sent=='success' && <p class="text-green-800 mb-6 md:m-0 md:px-10">{Message}</p>}
                           {sent=='error' && <p class="text-orange-800 mb-6 md:m-0">{Message}</p>}
                          <button type="submit" id="submitButton" class="bg-[#798F31] text-white lg:px-14 py-3 w-full lg:w-fit rounded-md hover:bg-[#0B76A3] hover:scale-105 transition">Enviar</button>
                     </div>
