--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -32,7 +32,7 @@ export const prerender = false;
 
                         // TODO: Handle form submission (e.g., send email)
 
-                    let subject = name + ' Solicita más información'
+                    let subject = name + ' Datos del Solicitante: '
                     let emailcontent = "<h1>Datos de la consulta</h1> <p>Nombre: "+name+" </p>"+
                                         "<p>Email: "+email+"</p> <p>Teléfono: "+phonenumber+"</p> <p>Modalidad: "+modality+"</p>";
 
