updated missing info

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,7 +7,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="/contact" class="text-[#333] hover:text-[#0B76A3] transition">Contacto</a></li>
-                <li id="area-alumnos"><a class="px-6 py-3 rounded-md text-white bg-[#798F31] hover:bg-[#0B76A3] transition" href="/">Área alumnos </a></li>
+                <li id="area-alumnos"><a class="px-6 py-3 rounded-md text-white bg-[#798F31] hover:bg-[#0B76A3] transition" href="https://opoinnova.moodlecloud.com/login/index.php">Área alumnos </a></li>
             </ul>
         </nav>
 
