--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -95,7 +95,7 @@ export const prerender = false;
 
             </div>
 
-            <p class="text-center gap-4 mb-10 px-4 text-white">Si lo prefieres, puedes contactarnos a través de <a class="font-bold text-[#A7BD5F] underline decoration-2 " href="https://wa.me/123456789" target="_blank">WhatsApp</a> o mandándonos un mensaje a nuestro <a class="font-bold text-[#6BBBDD] underline decoration-2 " href="https://www.instagram.com/opoinnovacv" target="_blank">Instagram</a>.</p>
+            <p class="text-center gap-4 mb-10 px-4 text-white">Si lo prefieres, puedes contactarnos a través de <a class="font-bold text-[#A7BD5F] underline decoration-2 " href="https://wa.me/651184164" target="_blank">WhatsApp(651 18 41 64)</a> o mandándonos un mensaje a nuestro <a class="font-bold text-[#6BBBDD] underline decoration-2 " href="https://www.instagram.com/opoinnovacv" target="_blank">Instagram</a>.</p>
 
         
 
